--- a/SmartUI/SmartUI.csproj
+++ b/SmartUI/SmartUI.csproj
@@ -95,6 +95,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SmartUI.Core\SmartUI.Core.csproj">
+      <Project>{65fb846a-3b9f-4ab0-bebd-02342cac6ec3}</Project>
+      <Name>SmartUI.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
