--- a/SmartUI/packages.config
+++ b/SmartUI/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net451" />
   <package id="MahApps.Metro" version="1.6.0-alpha016" targetFramework="net451" />
+  <package id="MahApps.Metro.IconPacks" version="1.9.1" targetFramework="net451" />
 </packages>
